--- a/index.html
+++ b/index.html
@@ -17,12 +17,19 @@
 	<div id="info">Fall 2020<br>
 	<div id="info">410606122 賈漢文 (Hen Wen)<br>
 	<div id="info">信箱聯絡請點選	<a href="mailto:ja055383@gmail.com">這裡</a>
-	<br><table align="center" border="1">
-	<tbody><tr><td width="500" height="350"><img width="500" height="350" src="132.gif"></td>
-	</tr><tr>
-	<td height="30">
-	<a href="HW1.html">HW1.html</a></td>
-	</tr></tbody></table>
+	<br>
+	<table align="center" border="1">
+		<tbody>
+			<tr>
+				<td width="500" height="350"><img width="500" height="350" src="132.gif"></td>
+				<td width="500" height="350"><img width="500" height="350" src="132.gif"></td>
+			</tr>
+			<tr>
+				<td height="30"><a href="HW1.html">HW1.html</a></td>
+				<td height="30"><a href="hw2.html">HW1.html</a></td>
+			</tr>
+		</tbody>
+	</table>
 	
 </div>
 </div>
